--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.31",
     "@types/pathfinding": "0.0.4",
+    "ajv": "^8.6.2",
     "behaviortree": "^2.0.4",
     "cannon": "^0.6.2",
     "colyseus": "^0.14.7",
@@ -45,7 +46,8 @@
     "path": "^0.12.7",
     "pathfinding": "^0.4.18",
     "quaternion-to-euler": "^0.5.0",
-    "tslerp": "^2.0.0"
+    "tslerp": "^2.0.0",
+    "v8n": "^1.3.3"
   },
   "repository": {
     "type": "git",
