--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "target": "es6",
     "module": "commonjs",
     "strict": true,
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "esModuleInterop": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
   }
 }
